# Polynomials

./: CMakeLists.txt  Polynom.cpp  Polynom.h  README.md  main.cpp
